[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "build-llms"
version = "0.1.0"
description = "Building LLMs from scratch"
readme = "README.md"
requires-python = "~=3.12"
dependencies = ["tiktoken==0.7.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[[tool.pip.index-urls]]
url = "https://download.pytorch.org/whl/nightly/cu130"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
